[package]
name = "barkbin"
version = "0.1.0"
authors = ["Pascal Hartig <phartig@rdrei.net>"]

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
diesel = { version = "1.0.0-beta1", features = ["sqlite"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite"] }
dotenv = "0.9.0"
failure = "0.1.1"
